seperated docker volume db & update script

--- a/server/Makefile
+++ b/server/Makefile
@@ -1,6 +1,7 @@
 NAME=botlord
 
 build:
+	go mod tidy
 	go build -o $(NAME)
 
 docker-build:
@@ -11,12 +12,14 @@ docker-run-api:
 		-e DISCORD_BOT_TOKEN=$(DISCORD_BOT_TOKEN) \
 		-e ENABLE_API=1 \
 		-p 8080:8080 \
+		-v botlord-db-volume:/app/db \
 		botlord   
 
 docker-run:
 	docker run -d --name botlord \
 		-e DISCORD_BOT_TOKEN=$(DISCORD_BOT_TOKEN) \
 		-e ENABLE_API=0 \
+		-v botlord-db-volume:/app/db \
 		botlord
 	
 clean:
