textChannelId optional, gif commands

--- a/server/Makefile
+++ b/server/Makefile
@@ -14,6 +14,7 @@ docker-registry:
 docker-run-api:
 	docker run -d --name botlord \
 		-e DISCORD_BOT_TOKEN=$(DISCORD_BOT_TOKEN) \
+		-e TEXT_CHANNEL_ID=$(TEXT_CHANNEL_ID) \
 		-e ENABLE_API=1 \
 		-p 8080:8080 \
 		-v botlord-db-volume:/app/db \
@@ -22,6 +23,7 @@ docker-run-api:
 docker-run:
 	docker run -d --name botlord \
 		-e DISCORD_BOT_TOKEN=$(DISCORD_BOT_TOKEN) \
+		-e TEXT_CHANNEL_ID=$(TEXT_CHANNEL_ID) \
 		-e ENABLE_API=0 \
 		-v botlord-db-volume:/app/db \
 		botlord
